--- a/contact.html
+++ b/contact.html
@@ -192,7 +192,7 @@
                           <!-- button -->
                           <div class="form-btn col-xl-12 contact-bar">
                             <input class="g-recaptcha site-btn" 
-                            data-sitekey="6LctS_0gAAAAAOpzjCib9cB3Ye7dzo6k-Bm9JPfX" 
+                            data-sitekey="reCAPTCHA_site_key" 
                             data-callback='onSubmit' 
                               type="submit"
                               value="Send"
