--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <!-- Google Web fonts -->    
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">  
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"> 
+<script src="https://www.google.com/recaptcha/api.js"></script>
+
 
 <!-- Font icons -->
 <link rel="stylesheet" href="icon-fonts/flat-icon/flaticon.css"/>
