--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <script src="https://www.google.com/recaptcha/api.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
     <!-- Font icons -->
     <link rel="stylesheet" href="icon-fonts/flat-icon/flaticon.css" />
@@ -191,9 +191,7 @@
                           <div class="g-recaptcha" data-sitekey="6LfkiP0gAAAAAB_lIDNiarmcwK-WS-zS8MhMqzu5"></div>
                           <!-- button -->
                           <div class="form-btn col-xl-12 contact-bar">
-                            <input class="g-recaptcha site-btn" 
-                            data-sitekey="6LfkiP0gAAAAAB_lIDNiarmcwK-WS-zS8MhMqzu5" 
-                            data-callback='onSubmit' 
+                            <input class="site-btn"  
                               type="submit"
                               value="Send"
                             />
