--- a/work-4.html
+++ b/work-4.html
@@ -84,7 +84,7 @@
                       <li><a href="index.html">Home</a></li>
                       <li><a href="resume.html">Resume</a></li>
                       <li><a href="portfolio.html">Portfolio</a></li>
-                      <li><a href="blog.html">Blog</a></li>
+                      <!-- <li><a href="blog.html">Blog</a></li> -->
                       <li><a href="contact.html">Contact</a></li>
                     </ul>
                   </nav>
@@ -113,9 +113,11 @@
                       </h3>
                       <div class="spacer-15"></div>
                       <p class="scale-animation" data-delay=".2">
-                        The client wanted a website where they can sell their products but only at a particular time,
-                         with an integrated wallet system where KCL coins would be exchanged for VGN which is
-                          the only acceptable means of payment in the platform.
+                        The client wanted a website where they can sell their
+                        products but only at a particular time, with an
+                        integrated wallet system where KCL coins would be
+                        exchanged for VGN which is the only acceptable means of
+                        payment in the platform.
                       </p>
                     </div>
                     <div class="col-lg-4 categories">
