--- a/work-5.html
+++ b/work-5.html
@@ -84,7 +84,7 @@
                       <li><a href="index.html">Home</a></li>
                       <li><a href="resume.html">Resume</a></li>
                       <li><a href="portfolio.html">Portfolio</a></li>
-                      <li><a href="blog.html">Blog</a></li>
+                      <!-- <li><a href="blog.html">Blog</a></li> -->
                       <li><a href="contact.html">Contact</a></li>
                     </ul>
                   </nav>
@@ -119,16 +119,16 @@
                       </div>
                     </div>
                     <div class="col-xl-8 offset-xl-1 work_description">
-                      <span class="category classic-animation"
-                        >Feron Auto</span
-                      >
+                      <span class="category classic-animation">Feron Auto</span>
                       <h2 class="title classic-animation" data-delay=".2">
                         About the Project
                       </h2>
                       <p class="text scale-animation" data-delay=".4">
-                        Feron Auto is hire-purchase service for commercial vehicles, providing
-                         both the investors and drivers a platform for openness and management.
-                         It's final version is expected to make payments and other settlements a walk through the park
+                        Feron Auto is hire-purchase service for commercial
+                        vehicles, providing both the investors and drivers a
+                        platform for openness and management. It's final version
+                        is expected to make payments and other settlements a
+                        walk through the park
                       </p>
                     </div>
                   </div>
@@ -136,7 +136,7 @@
 
                 <!-- Photos classic -->
                 <div class="spacer-45"></div>
-                <div class="lightbox-gallery ">
+                <div class="lightbox-gallery">
                   <div class="row">
                     <!-- a image -->
                     <div
@@ -163,7 +163,7 @@
                       >
                         <img src="images/works/work-5/02.png" alt="" />
                       </a>
-                    </div>                    
+                    </div>
                     <div
                       class="scale-animation item-3"
                       data-duration="2"
@@ -175,7 +175,7 @@
                       >
                         <img src="images/works/work-5/04.svg" alt="" />
                       </a>
-                    </div>                    
+                    </div>
                   </div>
                 </div>
                 <!-- a image -->
