--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <li><a class="active" href="index.html">Home</a></li>
               <li><a href="resume.html">Resume</a></li>
               <li><a href="portfolio.html">Portfolio</a></li>
-              <li><a href="blog.html">Blog</a></li>
+              <!-- <li><a href="blog.html">Blog</a></li> -->
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </nav>
@@ -121,7 +121,7 @@
       <section class="services scale-animation" data-delay="1.3">
         <div class="spacer-45"></div>
           <div class="spacer-45"></div>
-          <h5 class="underline-title">What I do</h5>
+          <h5 class="underline-title">I develop</h5>
 
         <div class="row services">
           <div class="spacer-60"></div>
@@ -139,6 +139,13 @@
             <h5>Decentralized <br> Aplications </h5>
           </div>
           </div>
+          <!-- a service -->
+          <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
+            <div class="service-item">
+            <i class="fa-brands fa-wordpress"></i>
+            <h5>WordPress <br> CMS </h5>
+          </div>
+          </div>          
       </section>
     
     <!-- testimonials -->
@@ -155,7 +162,7 @@
               <i class="flaticon-right-quote"></i>
             </div>
             <div class="right">
-              <p class="little-p">Victor understands knows how to take your idea and make it into
+              <p class="little-p">Victor understands and knows how to take your idea and make it into
                  something you would be proud to say is your website</p>
               <div class="comment-author">
                 <div class="author-info">
