--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,7 @@
                       <li>
                         <a class="active" href="portfolio.html">Portfolio</a>
                       </li>
-                      <li><a href="blog.html">Blog</a></li>
+                      <!-- <li><a href="blog.html">Blog</a></li> -->
                       <li><a href="contact.html">Contact</a></li>
                     </ul>
                   </nav>
