--- a/resume.html
+++ b/resume.html
@@ -60,8 +60,7 @@
               <li><a href="index.html">Home</a></li>
               <li><a class="active" href="resume.html">Resume</a></li>
               <li><a href="portfolio.html">Portfolio</a></li>
-              <li><a href="blog.html">Blog</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <!-- <li><a href="blog.html">Blog</a></li> -->              <li><a href="contact.html">Contact</a></li>
             </ul>
           </nav>
         </header>
