--- a/index.html
+++ b/index.html
@@ -131,6 +131,16 @@
             <i class="fa-solid fa-laptop-code"></i>
             <h5>Web Apps </h5>
           </div>
+          <p>
+            I build highly secured, maintainable and scalebale web apps, and can serve as a backend and fullstack web developer<br>
+            <i class="fab fa-python" style="color: #ffb400;"></i>
+            <i><img src="https://img.icons8.com/ios-filled/18/ffb400/c-sharp-logo.png"/></i>
+            <i class="fab fa-js-square" style="color: #ffb400;"></i>
+            <i><img src="https://img.icons8.com/material-outlined/18/ffb400/django.png"/></i>
+            <i><img src="https://img.icons8.com/fluency-systems-filled/24/ffb400/asp.png"/></i>
+            <i class="fab fa-html5" style="color: #ffb400;"></i>
+            <i class="fab fa-css3" style="color: #ffb400;"></i>
+          </p>
           </div>
           <!-- a service -->
           <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
@@ -138,6 +148,15 @@
             <i class="fa-brands fa-ethereum"></i>
             <h5>Decentralized <br> Aplications </h5>
           </div>
+          <p>
+            I build tokens, DApps and highly secured smart contracts accross any EVM-Compatible chain,
+             I can also place your token logo on Trust Wallet too<br>
+             <i><img src="https://img.icons8.com/ios-filled/18/ffb400/solidity.png"/></i>
+             <i class="fab fa-ethereum""></i>
+             <i><img src="https://img.icons8.com/external-black-fill-lafs/18/ffb400/external-Chainlink-cryptocurrency-black-fill-lafs.png"/></i>
+             <i><img src="https://img.icons8.com/external-black-fill-lafs/18/ffb400/external-Binance-cryptocurrency-black-fill-lafs.png"/></i>
+             <i><img src="https://img.icons8.com/external-black-fill-lafs/18/ffb400/external-Polygon-cryptocurrency-black-fill-lafs.png"/></i>
+          </p>
           </div>
           <!-- a service -->
           <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
@@ -145,6 +164,14 @@
             <i class="fa-brands fa-wordpress"></i>
             <h5>WordPress <br> CMS </h5>
           </div>
+          <p>I build intriguing WordPress websites that meet your business needs,
+             showcasing the essense and values you are offering to the entire world,
+             whilst giving you access to a maintanailble back-office like no ther <br>
+            </b>
+            <i class="fab fa-elementor"></i>
+            <i class="fab fa-wpforms"></i>
+            <i><img src="https://img.icons8.com/material-rounded/18/000000/woocommerce.png"/></i>
+          </p>
           </div>          
       </section>
     
