Added whatsapp feature

--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
+  <script src="./js/whatsapp.js"></script>
   <body class="scroll-animation-on">
     <!-- Preloader  -->
     <div id="loader" class="preloader">
