--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <![endif]-->
 
 </head>
+<script src="./js/whatsapp.js"></script>
 <body class="scroll-animation-on">
 
 <!-- Preloader  -->
@@ -152,7 +153,7 @@
             I build tokens, DApps and highly secured smart contracts accross any EVM-Compatible chain,
              I can also place your token logo on Trust Wallet too<br>
              <i><img src="https://img.icons8.com/ios-filled/18/ffb400/solidity.png"/></i>
-             <i class="fab fa-ethereum""></i>
+             <i class="fab fa-ethereum" style="color: #ffb400;" ></i>
              <i><img src="https://img.icons8.com/external-black-fill-lafs/18/ffb400/external-Chainlink-cryptocurrency-black-fill-lafs.png"/></i>
              <i><img src="https://img.icons8.com/external-black-fill-lafs/18/ffb400/external-Binance-cryptocurrency-black-fill-lafs.png"/></i>
              <i><img src="https://img.icons8.com/external-black-fill-lafs/18/ffb400/external-Polygon-cryptocurrency-black-fill-lafs.png"/></i>
@@ -168,9 +169,9 @@
              showcasing the essense and values you are offering to the entire world,
              whilst giving you access to a maintanailble back-office like no ther <br>
             </b>
-            <i class="fab fa-elementor"></i>
-            <i class="fab fa-wpforms"></i>
-            <i><img src="https://img.icons8.com/material-rounded/18/000000/woocommerce.png"/></i>
+            <i class="fab fa-elementor" style="color: #ffb400;"></i>
+            <i class="fab fa-wpforms" style="color: #ffb400;" ></i>
+            <i><img src="https://img.icons8.com/material-rounded/18/ffb400/woocommerce.png"/></i>
           </p>
           </div>          
       </section>
