--- a/resume.html
+++ b/resume.html
@@ -27,10 +27,11 @@
 <![endif]-->
 
 </head>
+<script src="./js/whatsapp.js"></script>
 <body class="scroll-animation-on">
 
   <!-- Preloader  -->
-<!-- <div id="loader" class="preloader">
+<div id="loader" class="preloader">
   <div class="loading">
     <div class="profile-image">
       <img src="images/profile-loader.jpg" alt="">
@@ -40,8 +41,8 @@
       </svg>
     </div>
   </div>
-</div> -->
-<!-- Preloader End --> 
+</div>
+<!-- Preloader End  -->
 
 <div class="page-cover">
   <div id="page-scroll">
@@ -282,10 +283,18 @@
                 <p>Copyright 2022 - All right reserved</p>
               </div>
               <ul class="social">
-                <li><a target="_blank" href="resume.html#">Facebook</a></li>
-                <li><a target="_blank" href="resume.html#">Twitter</a></li>
-                <li><a target="_blank" href="resume.html#">Instagram</a></li>
-                <li><a target="_blank" href="resume.html#">Dribbble</a></li>
+                <li>
+                <a href="https://www.facebook.com/victor.isaac.7923030" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                </li>
+                <li>
+                <a href="https://twitter.com/IsaacVictron" target="_blank"><i class="fab fa-twitter"></i></a>
+                </li>
+                <li>
+                <a href="https://linkedin.com/in/victor-isaac" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                </li>
+                <li>
+                <a href="https://github.com/Victhereum" target="_blank"><i class="fab fa-github"></i></a>
+                </li>
               </ul>
             </div>
                     </div>
