--- a/index.html
+++ b/index.html
@@ -3,9 +3,48 @@
 <head>
 <title>Victor Isaac - Portfolio</title>
 <meta charset="UTF-8">
-<meta name="description" content="Victor Isaac - Portfolio">
-<meta name="keywords" content="personal, portfolio">
+<meta name="description" content="Victor Isaac is an enthusiastic and passionate programmer with over 2 years
+of experience using various programming languages and web frameworks to
+ build and maintain websites and webapps. Experience in designing and developing
+  sites from concept to roll out. grasp of various programming languages like
+   C#, Python, JavaScript  and framework options like ASP.NETCore, Django etc.
+    including development platforms and security requirements.">
+<meta name="keywords" content=" Python, ASP.NETCore, backend, developer, solidity, django,victor isaac, portfolio, Victhereum">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta property="og:type" content="Portfolio" />
+
+<meta property="og:url" content="https://victherem.github.io" />
+
+<meta property="og:title" content="I develop for the web" />
+
+<meta property="og:image" content="https://victhereum.github.io/images/profile-loader.jpg" />
+
+<meta property="og:description" content="Victor Isaac is an enthusiastic and passionate programmer with over 2 years
+of experience using various programming languages and web frameworks to
+ build and maintain websites and webapps. Experience in designing and developing
+  sites from concept to roll out. grasp of various programming languages like
+   C#, Python, JavaScript  and framework options like ASP.NETCore, Django etc.
+    including development platforms and security requirements." />
+
+
+
+<meta name="twitter:card" content="summary_large_image">
+
+<meta name="twitter:site" content="@IsaacVictron">
+
+<meta name="twitter:creator" content="@IsaacVictron">
+
+<meta name="twitter:title" content="Full-Stack web developer" />
+
+<meta name="twitter:description" content="Victor Isaac is an enthusiastic and passionate programmer with over 2 years
+of experience using various programming languages and web frameworks to
+ build and maintain websites and webapps. Experience in designing and developing
+  sites from concept to roll out. grasp of various programming languages like
+   C#, Python, JavaScript  and framework options like ASP.NETCore, Django etc.
+    including development platforms and security requirements." />
+
+<meta name="twitter:image" content="https://victhereum.github.io/images/profile-loader.jpg" />
+
 <!-- Favicon -->   
 <link href="./images/favicon.png" rel="shortcut icon" type="image/x-icon" />
 
