SEO for all pages

--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
 <head>
 <title>Victor Isaac - Portfolio</title>
 <meta charset="UTF-8">
-<meta name="description" content="Victor Isaac is an enthusiastic and passionate programmer with over 2 years
-of experience using various programming languages and web frameworks to
- build and maintain websites and webapps. Experience in designing and developing
-  sites from concept to roll out. grasp of various programming languages like
-   C#, Python, JavaScript  and framework options like ASP.NETCore, Django etc.
-    including development platforms and security requirements.">
-<meta name="keywords" content=" Python, ASP.NETCore, backend, developer, solidity, django,victor isaac, portfolio, Victhereum">
+<meta name="title" content="FullStack Web Deveoper">
+<meta name="description" content="Victor Isaac is an enthusiastic and passionate programmer with over 2 yearsof experience using various programming languages and web frameworks to build and maintain websites and web apps. Experience in designing and developing sites from concept to rollout. grasp of various programming languages like C#, Python, JavaScript, and framework options like ASP.NETCore, Django, etc. including development platforms and security requirements.">
+<meta name="keywords" content="Python, Csharp, C# ASP.NETCore, backend, developer, solidity, Django, victor isaac, portfolio, Victhereum">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:type" content="Portfolio" />
-
+<meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="English">
 <meta property="og:url" content="https://victherem.github.io" />
 
 <meta property="og:title" content="I develop for the web" />
