--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,61 @@
   <head>
     <title>Victor Isaac - Portfolio</title>
     <meta charset="UTF-8" />
-    <meta name="description" content="Victor Isaac - Portfolio" />
-    <meta name="keywords" content="personal, portfolio" />
+    <meta name="title" content="FullStack Web Deveoper" />
+    <meta
+      name="description"
+      content="Victor Isaac is an enthusiastic and passionate programmer with over 2 yearsof experience using various programming languages and web frameworks to build and maintain websites and web apps. Experience in designing and developing sites from concept to rollout. grasp of various programming languages like C#, Python, JavaScript, and framework options like ASP.NETCore, Django, etc. including development platforms and security requirements."
+    />
+    <meta
+      name="keywords"
+      content="Python, Csharp, C# ASP.NETCore, backend, developer, solidity, Django, victor isaac, portfolio, Victhereum"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:type" content="Portfolio" />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="English" />
+    <meta property="og:url" content="https://victherem.github.io" />
+
+    <meta property="og:title" content="I develop for the web" />
+
+    <meta
+      property="og:image"
+      content="https://victhereum.github.io/images/profile-loader.jpg"
+    />
+
+    <meta
+      property="og:description"
+      content="Victor Isaac is an enthusiastic and passionate programmer with over 2 years
+of experience using various programming languages and web frameworks to
+ build and maintain websites and webapps. Experience in designing and developing
+  sites from concept to roll out. grasp of various programming languages like
+   C#, Python, JavaScript  and framework options like ASP.NETCore, Django etc.
+    including development platforms and security requirements."
+    />
+
+    <meta name="twitter:card" content="summary_large_image" />
+
+    <meta name="twitter:site" content="@IsaacVictron" />
+
+    <meta name="twitter:creator" content="@IsaacVictron" />
+
+    <meta name="twitter:title" content="Full-Stack web developer" />
+
+    <meta
+      name="twitter:description"
+      content="Victor Isaac is an enthusiastic and passionate programmer with over 2 years
+of experience using various programming languages and web frameworks to
+ build and maintain websites and webapps. Experience in designing and developing
+  sites from concept to roll out. grasp of various programming languages like
+   C#, Python, JavaScript  and framework options like ASP.NETCore, Django etc.
+    including development platforms and security requirements."
+    />
+
+    <meta
+      name="twitter:image"
+      content="https://victhereum.github.io/images/profile-loader.jpg"
+    />
     <!-- Favicon -->
     <link href="./images/favicon.png" rel="shortcut icon" type="image/x-icon" />
 
@@ -114,8 +166,8 @@
                           >tamsvictorisaac@outlook.com</a
                         >
                         <a href="mailto:tamsvictorisaac@gmail.com"
-                        >tamsvictorisaac@gmail.com</a
-                      >
+                          >tamsvictorisaac@gmail.com</a
+                        >
                       </div>
                       <div class="contact-info address">
                         <p class="little-p info-title">My office</p>
@@ -126,10 +178,24 @@
                       </div>
                       <div class="contact-info social">
                         <p class="little-p info-title">Follow us</p>
-                        <a href="https://www.facebook.com/victor.isaac.7923030" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://twitter.com/IsaacVictron" target="_blank"><i class="fab fa-twitter"></i></a>
-                        <a href="https://linkedin.com/in/victor-isaac" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="https://github.com/Victhereum" target="_blank"><i class="fab fa-github"></i></a>
+                        <a
+                          href="https://www.facebook.com/victor.isaac.7923030"
+                          target="_blank"
+                          ><i class="fab fa-facebook-f"></i
+                        ></a>
+                        <a
+                          href="https://twitter.com/IsaacVictron"
+                          target="_blank"
+                          ><i class="fab fa-twitter"></i
+                        ></a>
+                        <a
+                          href="https://linkedin.com/in/victor-isaac"
+                          target="_blank"
+                          ><i class="fab fa-linkedin-in"></i
+                        ></a>
+                        <a href="https://github.com/Victhereum" target="_blank"
+                          ><i class="fab fa-github"></i
+                        ></a>
                       </div>
                     </div>
                     <div
@@ -139,7 +205,9 @@
                     >
                       <!-- form -->
                       <div id="contact-formular">
-                        <p class="little-p info-title" id="message">Or fill this form</p>
+                        <p class="little-p info-title" id="message">
+                          Or fill this form
+                        </p>
                         <div class="spacer-10"></div>
                         <div id="message"></div>
                         <form
@@ -196,10 +264,15 @@
                             ></textarea>
                           </div>
                           <!-- reCaptcha -->
-                          <div class="g-recaptcha" data-sitekey="6LfkiP0gAAAAAB_lIDNiarmcwK-WS-zS8MhMqzu5"></div>
+                          <div
+                            class="g-recaptcha"
+                            data-sitekey="6LfkiP0gAAAAAB_lIDNiarmcwK-WS-zS8MhMqzu5"
+                          ></div>
                           <!-- button -->
                           <div class="form-btn col-xl-12 contact-bar">
-                            <input class="site-btn" onclick="deleteChild()"
+                            <input
+                              class="site-btn"
+                              onclick="deleteChild()"
                               type="submit"
                               value="Send"
                             />
@@ -222,16 +295,28 @@
                   </div>
                   <ul class="social">
                     <li>
-                    <a href="https://www.facebook.com/victor.isaac.7923030" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                      <a
+                        href="https://www.facebook.com/victor.isaac.7923030"
+                        target="_blank"
+                        ><i class="fab fa-facebook-f"></i
+                      ></a>
                     </li>
                     <li>
-                    <a href="https://twitter.com/IsaacVictron" target="_blank"><i class="fab fa-twitter"></i></a>
+                      <a href="https://twitter.com/IsaacVictron" target="_blank"
+                        ><i class="fab fa-twitter"></i
+                      ></a>
                     </li>
                     <li>
-                    <a href="https://linkedin.com/in/victor-isaac" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                      <a
+                        href="https://linkedin.com/in/victor-isaac"
+                        target="_blank"
+                        ><i class="fab fa-linkedin-in"></i
+                      ></a>
                     </li>
                     <li>
-                    <a href="https://github.com/Victhereum" target="_blank"><i class="fab fa-github"></i></a>
+                      <a href="https://github.com/Victhereum" target="_blank"
+                        ><i class="fab fa-github"></i
+                      ></a>
                     </li>
                   </ul>
                 </div>
@@ -257,8 +342,6 @@
         document.getElementById("gform").submit();
       }
     </script>
-    <script>
-
-    </script>
+    <script></script>
   </body>
 </html>
