--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,7 @@ of experience using various programming languages and web frameworks to
       name="twitter:image"
       content="https://victhereum.github.io/images/profile-loader.jpg"
     />
+    <link rel="canonical" href="https://victhereum.github.io/contact.html" />
     <!-- Favicon -->
     <link href="./images/favicon.png" rel="shortcut icon" type="image/x-icon" />
 
