--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ of experience using various programming languages and web frameworks to
     including development platforms and security requirements." />
 
 <meta name="twitter:image" content="https://victhereum.github.io/images/profile-loader.jpg" />
+<link rel="canonical" href="https://victhereum.github.io/index.html" />
 
 <!-- Favicon -->   
 <link href="./images/favicon.png" rel="shortcut icon" type="image/x-icon" />
