--- a/work-4.html
+++ b/work-4.html
@@ -58,6 +58,8 @@ of experience using various programming languages and web frameworks to
       name="twitter:image"
       content="https://victhereum.github.io/images/profile-loader.jpg"
     />
+    <link rel="canonical" href="https://victhereum.github.io/work-4.html" />
+
     <!-- Favicon -->
     <link href="./images/favicon.png" rel="shortcut icon" type="image/x-icon" />
 
