fixed dapp portfilio catalogue

--- a/portfolio.html
+++ b/portfolio.html
@@ -215,7 +215,7 @@ of experience using various programming languages and web frameworks to
                     <!-- portfolio item -->
                     <a
                       href="work-2.html"
-                      class="col-xl-4 col-lg-6 col-md-6 grid-item DApp"
+                      class="col-xl-4 col-lg-6 col-md-6 grid-item DApps"
                     >
                       <div
                         class="work-holder scale-animation"
