--- a/resume.html
+++ b/resume.html
@@ -153,7 +153,7 @@ including development platforms and security requirements."
           <!-- item -->
           <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 timeline-item clip-animation from-top" data-duration="1.5"  =".8">
             <div class="timeline-outer">
-            <span class="mini-text">2005 - 2008</span>
+            <span class="mini-text">2022 - Present</span>
             <h5>Smart Contract Developer - Freelance</h5>
             <p class="little-p">I co-developed a Multi-Staking Staking smart contract currently
                consumed by Agro-Matic, with rewards and networking feature. 
