Updated: about me

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ of experience using various programming languages and web frameworks to
         </div>
         <div class="spacer-30"></div>
         <p class="clip-animation" data-delay="1.1">
-          I'm an enthusiastic and passionate programmer with over 2 years of experience using various programming languages and web frameworks to build and maintain websites and web apps. Experience in designing and developing sites from concept to rollout. grasp of various programming languages like C#, Python, JavaScript, and framework options like ASP.NETCore, Django, etc. including development platforms and security requirements. I am fluent in English and is able to undertake with utmost perfection jobs I am privileged to have.
+          I'm an enthusiastic and passionate programmer with over 2 years of experience using various programming languages and web frameworks to build and maintain websites and web apps. Experience in designing and developing sites from concept to rollout. grasp of various programming languages like C#, Python, JavaScript, and framework options like Django, etc. including development platforms and security requirements. I am fluent in English and am able to undertake with utmost perfection the jobs I am privileged to have.
 
         <!-- download cv-->
          <div class="spacer-45"></div>
